--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 76px;
-  border-top: 2px solid #e5ff46;
+  // border-top: 2px solid #e5ff46;
   background: #b4b4b4;
 
   @media (min-width: 768px) {
@@ -189,10 +189,18 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  border: 1px solid var(--button, #e5ff46);
   background: #fff;
   padding: 12px 20px;
   font-size: var(--f-size-small);
+
+  // !!!
+  border: 1px solid var(--button, #e5ff46);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  // !!!
+
   @media (min-width: 768px) {
     display: none;
   }
